# claude-or-cursor-orchestra

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/docs/plans/: cursor-orchestration-plan.md
.codex/: AGENTS.md
.cursor/: mcp.json
.cursor/commands/: checkpoint.md  codex.md  design.md  gemini.md  plan.md  research-lib.md  review.md  simplify.md  startproject.md  tdd.md
.cursor/hooks/: agent-router.py
.cursor/rules/: codex-delegation.mdc  coding-principles.mdc  dev-environment.mdc  gemini-delegation.mdc  language.mdc
.cursor/skills/checkpointing/: SKILL.md
.cursor/skills/codex/: SKILL.md
.cursor/skills/codex-system/: SKILL.md
.cursor/skills/design-tracker/: SKILL.md
.cursor/skills/gemini/: SKILL.md
.cursor/skills/gemini-system/: SKILL.md
.cursor/skills/init/: SKILL.md
.cursor/skills/plan/: SKILL.md
.cursor/skills/research-lib/: SKILL.md
.cursor/skills/review/: SKILL.md
.cursor/skills/simplify/: SKILL.md
.cursor/skills/startproject/: SKILL.md
.cursor/skills/tdd/: SKILL.md
.cursor/skills/update-design/: SKILL.md
.cursor/skills/update-lib-docs/: SKILL.md
src/: __init__.py
src/mcp/: __init__.py  codex_server.py  gemini_server.py
