[project]
name = "claude-code-orchestra"
version = "0.1.0"
description = "Multi-agent coordination framework with Claude Code, Codex CLI, and Gemini CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "poethepoet>=0.31",
]

[project.scripts]
codex-mcp = "src.mcp.codex_server:main"
gemini-mcp = "src.mcp.gemini_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================
# ruff
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# ============================================================
# mypy
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ============================================================
# pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

# ============================================================
# poethepoet
# ============================================================
[tool.poe.tasks]
lint = "ruff check . && ruff format --check ."
format = "ruff check --fix . && ruff format ."
typecheck = "mypy src/"
test = "pytest -v"
all = ["lint", "format", "typecheck", "test"]
